<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/judulHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/pekerja"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dip">

            <!-- Text Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="5dp"
                android:text="@string/Pekerja" />

            <!-- Spinner Element -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerPekerja"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"

                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/baju"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip">

            <!-- Text Label -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/spinner_title" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/Jumlah" />
            </LinearLayout>

            <!-- Spinner Element -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerBaju"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/jumlahBaju1"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:text="" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonTambah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tambah" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/headerNoBarang"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="No"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/headerNamaBarang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Nama" />

            <TextView
                android:id="@+id/headerHargaBarang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Harga" />

            <TextView
                android:id="@+id/headerJumlahBarang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Jumlah" />

            <TextView
                android:id="@+id/headerSubtotalBarang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Subtotal" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleDetail"
            android:layout_width="match_parent"
            android:layout_height="283dp" >

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="5">

            <TextView
                android:id="@+id/tot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="4"
                android:text="@string/Total" />

            <TextView
                android:id="@+id/totalAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Total" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />


    </LinearLayout>

</ScrollView>