<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="5sp"
            android:id="@+id/judulMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_main"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/pekerja"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dip">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/cardMenu2"
                android:layout_weight="4" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/gambarMenu2"
                        android:layout_width="50dp"
                        android:layout_height="75dp"
                        android:layout_weight="1"
                        android:src="@drawable/salary"
                        android:clickable="true"/>

                    <TextView
                        android:id="@+id/Menu2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:text="@string/title"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textSize="30dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardMenu1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/gambarMenu1"
                    android:layout_width="50dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/history" />

                <TextView
                    android:id="@+id/Menu1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/title2"
                    android:textAlignment="center"
                    android:textSize="30dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>